# frostAV

./: .gitignore  .gitmodules  LICENSE  README.org  pyproject.toml  setup
controller/: Makefile  README.org
controller/common/: Clamp.hpp
controller/doc/: README.org
controller/mk/: default.mk  toolchain.mk
design/: README.org
design/powersupply/: PE-54040SNL-pcb-part-libraries.epw  Parts List (old).ods  Parts List (old).txt  Parts List (old).xls  Senior Design Power PCB-cache.lib  Senior Design Power PCB-rescue.lib  Senior Design Power PCB.kicad_pcb  Senior Design Power PCB.kicad_pcb-bak  Senior Design Power PCB.pro  Senior Design Power PCB.sch  Senior Design Power PCB.sch-bak  fp-info-cache  partslist.xls  sym-lib-table
design/schematic/: Custom.dcm  Custom.lib  Senior Design Power PCB-cache.lib  Senior Design Power PCB.sch  schematic-cache.lib  schematic-rescue.lib  schematic.pro  schematic.sch  schematic.sch-bak
frostServer/: README.org  __init__.py  camera_opencv.py  frame  frostServer.nginx  frostServer.service  lane  laneModel.py  signModel.py  source  wsgi.py
org/: README.html  README.org  frostAV.html  frostAV.org  latex_setup.org  latex_startup.org
research/: clean  research.org  research.sty
server/: README.org  __init__.py  __main__.py  laneModel.py  signModel.py  vehicleModel.py
source/lane_detection/: CMakeCache.txt  CMakeLists.txt  Makefile  canny  canny.cpp  cmake_install.cmake  lane_detection  lane_detection.cpp  ver2.cpp
vehicleInterfaceController/: README.org
vehicle_interface_controller/: Makefile  README.org
(+299 files in other folders)
