[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Lewis Collum"]
license = "MIT"

[tool.poetry.scripts]
run = "server.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
opencv-python = "^4.5.5"
Pillow = "^9.1.1"

[tool.poetry.dev-dependencies]
setuptools = "^62.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
