cmake_minimum_required(VERSION 2.8)
project(lane_detection )
find_package( OpenCV REQUIRED )
add_executable( lane_detection lane_detection.cpp)
target_link_libraries( lane_detection ${OpenCV_LIBS} )
add_executable( vid vid.cpp)
target_link_libraries( vid ${OpenCV_LIBS})
#add_executable( contrast contrast.cpp)
#target_link_libraries( contrast ${OpenCV_LIBS})
add_executable( canny canny.cpp)
target_link_libraries( canny ${OpenCV_LIBS})
add_executable( ver2 ver2.cpp)
target_link_libraries( ver2 ${OpenCV_LIBS})
